# Healthcare_with_Agentic_RAG

./: .gitignore  README.md  case_history_retriever.py  pyproject.toml
src/data/: medical_data.json
src/data_loader/: data_ingester.py
src/rag_agent/: rag_agents.py
utils/: constants.py
